# hands-on-haskell

./: .gitignore  .project-settings.yml  README.md  generateRandomTestData.hs  hands-on-haskell.cabal  publish  testdata.txt
Functions/: FunctionsSpec.hs
docker/: Dockerfile  build  dotemacs  run
ideas/: Cart.hs  ShoppingCart.hs
lesson1/: CheatSheet.hs  Currying.hs  Functions.hs  ProjectEuler.hs  QuickCheckExamples.hs  Recursion.hs  RecursionSchemes.hs  Regex.hs  Tests.hs
lessonA/: A10_Regex.hs  A1_GettingStarted.hs  A2_Functions.hs  A3_PatternMatching.hs  A4_Recursion.hs  A5_RecursionSchemes.hs  A6_Currying.hs  A7_HigherOrderFunctions.hs  A8_QuickCheckExamples.hs  A9_ProjectEuler.hs  Regex.hs  Tests.hs
lessonA/QuickCheck/: QuickCheck.hs
lessonA/Recursion/: Recursion.hs
lessonB/: BST.hs  BinTree.hs  Bx_TypeAlias.hs  Bx_UpdateRecords.hs  Bx_UsingDataTypes.hs  IntBST.hs  Maybe.hs  Tests.hs  TextCalculator.hs  TypeAlias.hs  UpdateRecords.hs  UsingDataTypes.hs
lessonB/slides/: index.html
lessonC/: CreditCardNumberValidator.hs  CreditCardNumberValidatorTests.hs  GenericBinTree.hs  GroceryShopping.hs  MuJson.hs  Tests.hs  Vigenere.hs  VigenereTests.hs  slides.markdown
lessonC/Tests/: CreditCardNumberValidator.hs  GenericBinTree.hs  MuJson.hs
lessonC/tests/: GroceryShopping.hs  Vigenere.hs
src/: Basics.hs  CheatSheet.hs  CommonDataTypesAndFunctions.hs  CommonDatatypesAndFunctions.hs  Currying.hs  DataTypes.hs  E1.hs  E2.hs  Functions.hs  Functions1.hs  GettingStarted.hs  HigherOrderFunctions.hs  Lists.hs  Modules.hs  ModulesAndImports.hs  PatternMatching.hs  ProjectEuler.hs  QuickCheckExamples.hs  Recursion.hs  RecursionSchemes.hs  Regex.hs  Tests.hs  Tuples.hs  TypeInference.hs
src/Types/: Primitive.hs
(+4 files in other folders)
