name:                hands-on-haskell
version:             0.0.0.1
author:              Tobias G. Waaler
maintainer:          tobiasgwaaler@gmail.com
category:            Educational
build-type:          Simple

extra-source-files:  README.md
cabal-version:       >=1.10


executable hands-on-haskell
  main-is:             Tests.hs
  
  -- Modules included in this executable, other than Main.
  -- other-modules:       
  
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    
  
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.7 && <4.8,
                       QuickCheck,
                       hspec

  hs-source-dirs:      lessonA
  default-language:    Haskell2010
  